<resources>
    <string name="app_name">My Movies</string>
    <string name="img">Movie Poster</string>
    <string name="search_hint">Search for Movies</string>
    <string name="actors">Actors :</string>
    <string name="producer">Producer :</string>
    <string name="director">Director :</string>
    <string name="year">Year :</string>
    <string name="genre">Genre :</string>
</resources>
